Move to GDExtension (#825)
Move from module to gdextension

Co-authored-by: Pierre-Thomas Meisels <meisels27@yahoo.fr>